[package]
name = "wfrs-engine"
description = "Workflow RS - Engine to drive workflows via bpmn diagrams"
version = "0.20.0"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-recursion = "1.0.5"
async-trait = "0.1.74"
serde_json = "1"
futures-locks = "0.7.1"
wfrs-model = { path = "../model", version = "0.20.0" }
wfrs-validator = { path = "../validator", version = "0.20.0" }
log = "0.4.20"
rkyv = "0.7"
