[package]
name = "wfrs-model"
description = "Workflow RS - Model with Zero-copy deserialization"
version = "0.0.16"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = { version = "0.7", features = ["validation"]}
