[package]
name = "wfrs-validator"
description = "Workflow RS - Validation on expressions i.e. jsep"
version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wfrs-model = { path = "../model" }
log = "0.4.6"
