[package]
name = "parser"
version.workspace = true
authors = ["Jürgen Seitz <juergen.seitz@h-d-gmbh.de>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = "1.0.75"
wasm-bindgen = "0.2.87"
quick-xml = { version = "0.31.0", features = ["serialize"] }
thiserror = "1.0.49"
js-sys = "0.3.64"
wfrs-model = { path = "../../crates/model" }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
