[package]
name = "runtime"
version.workspace = true
authors = ["Jürgen Seitz <juergen.seitz@h-d-gmbh.de>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
wfrs-model = { path = "../../crates/model" }
wfrs-engine = { path = "../../crates/engine" }
rexie = "0.5"
rkyv = "0.7"
lazy_static = "1.4"
futures-locks = "0.7.1"
log = "0.4.20"
wasm-logger = "0.2.0"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
